--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "webpack-merge": "^0.8.4"
   },
   "dependencies": {
+    "alt": "^0.18.3",
+    "alt-container": "^1.0.2",
+    "alt-utils": "^1.0.0",
     "react": "^0.14.7",
+    "react-dnd": "^2.1.3",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7",
     "stylelint-config-suitcss": "^5.0.0"
   }
