--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "stats": "webpack --profile --json > stats.json",
     "build": "webpack",
     "start": "webpack-dev-server",
-    "lint": "eslint . --ext .js --ext .jsx"
+    "lint": "eslint . --ext .js --ext .jsx",
+    "test": "karma start",
+    "tdd": "karma start --auto-watch --no-single-run"
   },
   "keywords": [],
   "author": "",
@@ -29,10 +31,23 @@
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.14.0",
     "html-webpack-template": "^4.0.0",
+    "isparta-instrumenter-loader": "^1.0.0",
     "jscs": "^2.11.0",
     "jscs-loader": "^0.2.0",
+    "karma": "^0.13.22",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.24",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.4.5",
     "npm-install-webpack-plugin": "^3.0.0",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.6",
     "postcss-loader": "^0.8.2",
+    "react-addons-test-utils": "^0.14.7",
+    "react-dnd-test-backend": "^1.0.2",
     "style-loader": "^0.13.0",
     "stylelint": "^5.1.0",
     "stylelint-config-suitcss": "^5.0.0",
