--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "alt-utils": "^1.0.0",
     "react": "^0.14.7",
     "react-addons-update": "^0.14.7",
+    "react-bootstrap": "^0.28.4",
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7"
