--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "alt": "^0.18.3",
     "alt-container": "^1.0.2",
     "alt-utils": "^1.0.0",
+    "firebase": "^2.4.2",
     "react": "^0.14.7",
     "react-addons-update": "^0.14.7",
     "react-bootstrap": "^0.28.4",
